[package]
name = "figlet-rs"
version = "1.0.0"
authors = ["yuanbohan <yuanbo.han@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.56"
readme = "README.md"
homepage = "https://github.com/yuanbohan/rs-figlet"
repository = "https://github.com/yuanbohan/rs-figlet"
description = """
Rust implementation of FIGlet to create ascii art
"""
keywords = ["figlet", "ascii"]
categories = ["no-std"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-APACHE",
    "COPYRIGHT",
    "src/**",
    "resources/*.flf",
    "resources/*.tlf",
]

[dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }
